Nov 20, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- fix wrong pointer passed to userver_ref

Nov 17, 2002: Jordi Mallach <jordi@sindominio.net>
- Initialize i18n for xqf-rcon.

Nov 16, 2002: Alex Burger <alex_b@users.sourceforge.net>
- Changed version to 0.9.10.1

Nov 16, 2002: Alex Burger <alex_b@users.sourceforge.net>
- Changed version to 0.9.10

Nov 09, 2002: Jordi Mallach <jordi@sindominio.net>
- Fix typos in Catalan translation.

Nov 07, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- make cl_punkbuster method usable for any game, make it configurable for wolf
- use protocol 60 by default for RTCW

Nov 06, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- added protocol 60 for RTCW 1.4 to preferences
- added -lncurses to readline check

Nov 05, 2002: Jordi Mallach <jordi@sindominio.net>
- Update QW master list, remove non-working and add QuakeForge's.

Nov 05, 2002: Jordi Mallach <jordi@sindominio.net>
- Updated Catalan and Spanish translations.

Nov 5, 2002: Alex Burger <alex_b@users.sourceforge.net>
- Add parameter to play_sound to force playing even if sound is disabled.
  Used by Test buttons to Preferences - Sound page

Nov 05, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- use gtk functions instead of spaces to make test button look nice
- update german translation

Nov 3, 2002: Alex Burger <alex_b@users.sourceforge.net>
- Add Test buttons to Preferences - Sound page

Nov 02, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- fix saving of player info for rune, ut2 and tribes2
- do not display a single slash when model and skin are empty

Nov 2, 2002: Alex Burger <alex_b@users.sourceforge.net>
- Add gametype decode for instaunlagged, instagibplus, beryllium, excessive,
  q3f, q3f2

Nov 1, 2002: Alex Burger <alex_b@users.sourceforge.net>
- Add gametype decode for arena and cpma
- Fix for find_file_in_path to not append / if directory is blank.  Caused
  more and more beginning /'s in game command line each time you pressed 
  enter in the field.